Remove statically generated api folder before deploying to the gh-pages branch

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,6 +23,9 @@ jobs:
 
       - run: npm run build
 
+      - name: Remove statically generated api folder
+        run: rm -rf ./api
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/master' }}
