--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,7 +24,7 @@ jobs:
       - run: npm run build
 
       - name: Remove statically generated api folder
-        run: rm -rf ./api
+        run: rm -rf ./build/api
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
